	'lib/rdairplay_conf.cpp' and 'lib/rdairplay_conf.h'.
	* Added a log selector dropdown to handle cases where more than
	three log machines are enabled in 'rdairplay/rdairplay.cpp' and
	'rdairplay/rdairplay.h'.
2015-01-01 Fred Gleason <fredg@paravelsystems.com>
	* Refactored Start/Stop controls in 'rdadmin/edit_rdairplay.cpp'
	and 'rdadmin/edit_rdairplay.h' to use a separate widget in
	'rdadmin/edit_startstop.cpp' and 'rdadmin/edit_startstop.h'.
2015-01-01 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Load Log' ['LL'] RML for Aux Logs 3-16.
2015-01-01 Fred Gleason <fredg@paravelsystems.com
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Append Log' ['AL'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Make Next' ['MN'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Start' ['PL'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Start Next' ['PN'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Stop' ['PS'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Set Duck Level' ['MD'] RML for Aux Logs 3-16.
2015-01-01 Fred Gleason <fredg@paravelsystems.com
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Select Widget' ['PW'] RML for Aux Logs 3-16.
2015-01-01 Fred Gleason <fredg@paravelsystems.com
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Add Next' ['PX'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Refresh Log' ['RL'] RML for Aux Logs 3-16.
	* Fixed a bug in 'rdairplay/log_play.cpp' that threw a segfault
	when refreshing logs.
2015-01-01 Fred Gleason <fredg@paravelsystems.com
	* Fixed a bug in 'rdairplay/local_macros.cpp' that broke the
	'Set Default Now & Next Cart' ['SN'] RML for Aux Logs 3-16.